--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -56,12 +56,12 @@ dependencies {
 
 
 	//emi
-	//modCompileOnly "dev.emi:emi:${emi_version}:api"
-	//modLocalRuntime "dev.emi:emi:${emi_version}"
+	modCompileOnly "dev.emi:emi:${emi_version}:api"
+	modLocalRuntime "dev.emi:emi:${emi_version}"
 	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
 	//JEI
-	modRuntimeOnly "maven.modrinth:u6dRKJwZ:Fq2JkIID"
+	//modRuntimeOnly "maven.modrinth:u6dRKJwZ:Fq2JkIID"
 
 	//toolstats testing
 	//modImplementation "curse.maven:tool-stats-377109:3944167"
