--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
 	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
 
-	modImplementation("net.devtech:arrp:${project.aarp_version}")
+	modImplementation("maven.modrinth:arrp:${project.aarp_version}")
 
 
 	//dynamiclights compat
