--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -56,8 +56,8 @@ dependencies {
 
 
 	//emi
-	modCompileOnly "dev.emi:emi:${emi_version}:api"
-	modLocalRuntime "dev.emi:emi:${emi_version}"
+	//modCompileOnly "dev.emi:emi:${emi_version}:api"
+	//modLocalRuntime "dev.emi:emi:${emi_version}"
 	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
 	//JEI
