--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -115,4 +115,11 @@ allprojects {
 			rename { "${it}_${archivesBaseName}" }
 		}
 	}
+	java {
+		withSourcesJar()
+	}
+}
+
+java {
+	withSourcesJar()
 }
