--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -96,6 +96,10 @@ task publishToModrinthAndCurseForge {
 }
 
 allprojects {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+
+	
 	repositories {
 		maven { url "https://api.modrinth.com/maven" }
 		maven { url "https://cursemaven.com" }
