--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ modid=forgero
 minecraft_version=1.20.1
 # Forgero version
 forgero_version=0.11.6-rc-2
-release_type=beta
+release_type=alpha
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
