* Reverted some namespace changes and fixed some package namespaces * Switched from using id to name in cases where equipment does not have a forgero namespace

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/betternether/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/betternether/package.json
@@ -2,7 +2,7 @@
   "name": "betternether-materials",
   "resource_type": "PACKAGE",
   "priority": 5,
-  "namespace": "minecraft",
+  "namespace": "betternether",
   "dependencies": [
     "minecraft",
     "forgero",
