--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+	modCompileOnly "vazkii.patchouli:Patchouli:${project.patchouli_version}"
 
 	modImplementation("maven.modrinth:arrp:${project.aarp_version}")
 
@@ -52,7 +52,6 @@ dependencies {
 	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
 	// modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
 	// modImplementation "maven.modrinth:MpzVLzy5:InVK1xFf"
-
 
 	//emi
 	//modCompileOnly "dev.emi:emi:${emi_version}:api"
@@ -128,7 +127,6 @@ dependencies {
 
 	// Mod Menu API
 	modImplementation("com.terraformersmc:modmenu:${this.modmenu_version}")
-
 }
 
 sourceSets {
@@ -141,17 +139,6 @@ sourceSets {
 loom {
 	accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
 	runs {
-		runClient {
-			client()
-			ideConfigGenerated(true)
-
-			dependencies {
-				runtimeOnly project(':content:forgero-vanilla')
-				runtimeOnly project(':content:forgero-extended')
-				runtimeOnly project(':content:forgero-compat')
-				runtimeOnly project(':content:forgero-structures')
-			}
-		}
 		testmodServer {
 			server()
 			ideConfigGenerated project.rootProject == project
@@ -167,11 +154,10 @@ loom {
 			vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
 			runDir "build/gametest"
 		}
-		clientExtendedCompatOptimisedJustLoad {
+		clientJustRun {
 			name "Client Extended Compat Optimised Just Load"
 
 			dependencies {
-				modRuntimeOnly "maven.modrinth:lazydfu:0.1.3"
 				modRuntimeOnly "maven.modrinth:just-load:${project.justload_version}"
 			}
 
