--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ modid=forgero
 # Minecraft version
 minecraft_version=1.19.2
 # Forgero version
-forgero_version=0.11.6-rc-4
-release_type=beta
+forgero_version=0.11.6
+release_type=release
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
