* Changing to modLocalRuntime * Updating loom version * Updating Fabric and loader versions

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,12 +1,10 @@
 plugins {
-	id "idea"
-	id "fabric-loom" version "1.2.5" apply true
-	id 'maven-publish'
+	id "fabric-loom" version '1.4-SNAPSHOT' apply true
 	id "com.modrinth.minotaur" version "2.+"
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
-configure(subprojects) {
+configure(allprojects) {
 	apply plugin: 'java-library'
 	apply plugin: "idea"
 	apply plugin: 'maven-publish'
@@ -15,11 +13,10 @@ configure(subprojects) {
 
 archivesBaseName = "forgero-fabric"
 
-
 dependencies {
 	minecraft "com.mojang:minecraft:$project.minecraft_version"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modApi "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	include project(':forgero-core')
 
@@ -31,6 +28,14 @@ dependencies {
 	include project(':content:forgero-extended')
 	include project(':content:forgero-compat')
 	include project(':content:forgero-structures')
+
+	api project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
+	implementation project(path: ':fabric:forgero-fabric-compat', configuration: 'namedElements')
+
+	runtimeOnly project(':content:forgero-vanilla')
+	runtimeOnly project(':content:forgero-extended')
+	runtimeOnly project(':content:forgero-compat')
+	runtimeOnly project(':content:forgero-structures')
 }
 
 subprojects {
@@ -45,8 +50,6 @@ subprojects {
 		implementation 'org.projectlombok:lombok:1.18.24'
 		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 	}
-	// configure the maven publication
-
 }
 
 curseforge {
@@ -119,8 +122,4 @@ allprojects {
 	java {
 		withSourcesJar()
 	}
-}
-
-java {
-	withSourcesJar()
 }
