* Including runtime main dependencies in tests

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -133,6 +133,7 @@ sourceSets {
 	test {
 		compileClasspath += test.compileClasspath
 		runtimeClasspath += test.runtimeClasspath
+		runtimeClasspath += main.runtimeClasspath
 	}
 }
 
