--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -38,6 +38,8 @@ sourceSets {
 	test {
 		compileClasspath += test.compileClasspath
 		runtimeClasspath += test.runtimeClasspath
+		runtimeClasspath += main.runtimeClasspath
+
 	}
 }
 
