[Patch]: Non-transitive runtimeOnly dependencies (#791)
* Added non-transitive localRuntime dependencies

* Updating loom version
* Updating Fabric and loader versions

* Fixed incorrect settings.gradle config

* Simplified run configuration

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,15 +1,11 @@
 plugins {
-	id "idea"
-	id "fabric-loom" version "1.2.5" apply true
-	id 'maven-publish'
+	id "fabric-loom" version '1.4-SNAPSHOT' apply true
 	id "com.modrinth.minotaur" version "2.+"
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
-configure(subprojects) {
-	apply plugin: 'java-library'
+configure(allprojects) {
 	apply plugin: "idea"
-	apply plugin: 'maven-publish'
 	apply plugin: 'fabric-loom'
 }
 
@@ -18,7 +14,7 @@ archivesBaseName = "forgero-fabric"
 dependencies {
 	minecraft "com.mojang:minecraft:$project.minecraft_version"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modApi "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	include project(':forgero-core')
 
@@ -30,6 +26,13 @@ dependencies {
 	include project(':content:forgero-extended')
 	include project(':content:forgero-compat')
 	include project(':content:forgero-structures')
+
+	api project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
+
+	runtimeOnly project(':content:forgero-vanilla')
+	runtimeOnly project(':content:forgero-extended')
+	runtimeOnly project(':content:forgero-compat')
+	runtimeOnly project(':content:forgero-structures')
 }
 
 subprojects {
@@ -44,8 +47,6 @@ subprojects {
 		implementation 'org.projectlombok:lombok:1.18.24'
 		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 	}
-	// configure the maven publication
-
 }
 
 curseforge {
@@ -118,8 +119,4 @@ allprojects {
 	java {
 		withSourcesJar()
 	}
-}
-
-java {
-	withSourcesJar()
 }
