--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,6 @@ include 'fabric'
 include 'fabric:forgero-fabric-core'
 include 'fabric:forgero-fabric-compat'
 include 'fabric:minecraft-common'
+
+include 'fabric:modules'
+include 'fabric:modules:bows'
