--- a/settings.gradle
+++ b/settings.gradle
@@ -12,21 +12,23 @@ pluginManagement {
 }
 
 rootProject.name = 'forgero'
-//Core
+
+// Core
 include 'forgero-core'
 
-//Content
+// Content
 include 'content'
 include 'content:forgero-extended'
 include 'content:forgero-vanilla'
 include 'content:forgero-compat'
 include 'content:forgero-structures'
 
-//Fabric
+// Fabric
 include 'fabric'
 include 'fabric:forgero-fabric-core'
 include 'fabric:forgero-fabric-compat'
 include 'fabric:minecraft-common'
 
+// Modules
 include 'fabric:modules'
 include 'fabric:modules:bows'
