* Created a dedicated module for dynamic recipe generation

--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
 	api project(':forgero-core')
+	implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
+
 	api project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
@@ -41,7 +43,6 @@ sourceSets {
 		compileClasspath += test.compileClasspath
 		runtimeClasspath += test.runtimeClasspath
 		runtimeClasspath += main.runtimeClasspath
-
 	}
 }
 
