--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,5 @@ include 'fabric:minecraft-common'
 // Modules
 include 'fabric:modules'
 include 'fabric:modules:bows'
+include 'fabric:modules:generator'
+
