--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
 	implementation project(':forgero-core')
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
+	implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
 	modImplementation "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
