--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modImplementation "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
+	modCompileOnly "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
 
 	modImplementation "curse.maven:arrp-463113:3901211"
 
