--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -27,3 +27,4 @@ aea_versionite=1.19-SNAPSHOT
 emi_version=0.6.1+1.19.2
 player_anim_version=0.3.5
 bclib_version=2.1.4
+yacl_version=2.2.0-for-1.19.2
