Moved most of the stuff into right module Added missing schematic textures

--- a/fabric/modules/bows/src/main/resources/data/forgero/packs/bows-extended/package.json
+++ b/fabric/modules/bows/src/main/resources/data/forgero/packs/bows-extended/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bow-additions",
+  "name": "bow-extended",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
