* Patched mystical crops typo

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -78,7 +78,7 @@ curseforge {
 				optionalDependency "mythicmetals"
 				optionalDependency "betternether"
 				optionalDependency "byg"
-				optionalDependency "mysticalcrops"
+				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
 				optionalDependency "vsas"
 				optionalDependency "wiredredstone"
@@ -112,7 +112,7 @@ modrinth {
 		optional.project "mythicmetals"
 		optional.project "betternether"
 		optional.project "byg"
-		optional.project "mysticalcrops"
+		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "vsas"
 		optional.project "wiredredstone"
