* Creating the structure for the villager module

--- a/settings.gradle
+++ b/settings.gradle
@@ -32,5 +32,6 @@ include 'fabric:minecraft-common'
 // Modules
 include 'fabric:modules'
 include 'fabric:modules:bows'
+include 'fabric:modules:villager'
 include 'fabric:modules:generator'
 
