--- a/fabric/modules/smithing-rework/build.gradle
+++ b/fabric/modules/smithing-rework/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
+    implementation project(path: ':fabric:forgero-fabric-core')
+	testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
