* Cleaned up module code

--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 	localRuntime project(':content:forgero-structures')
 
 	localRuntime project(path: ':fabric:modules:bows', configuration: 'namedElements')
+	localRuntime project(path: ':fabric:modules:smithing-rework', configuration: 'namedElements')
 }
 
 loom {
