--- a/fabric/modules/smithing-rework/build.gradle
+++ b/fabric/modules/smithing-rework/build.gradle
@@ -1,20 +1,4 @@
-plugins {
-    id 'java'
-}
-
-group = 'com.sigmundgranaas.forgero'
-version = '0.11.11+1.20.1'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation project(path: ':fabric:forgero-fabric-core')
-	testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+	implementation project(":fabric:forgero-fabric-core")
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
