--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,3 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx8G
-org.gradle.parallel=true
 # Mod Properties
 modid=forgero
 # Minecraft version
@@ -10,3 +7,8 @@ forgero_version=0.11.11
 release_type=release
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
+# Optimizations
+org.gradle.parallel=true
+fabric.loom.multiProjectOptimisation=true
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx4G
