--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -1,168 +1,169 @@
 repositories {
-	mavenCentral()
-	maven { url "https://maven.shedaniel.me/" }
-	maven { url 'https://maven.blamejared.com' }
-	maven { url "https://minecraft.guntram.de/maven/" }
-	maven { url "https://maven.terraformersmc.com/" }
-	maven { url "https://maven.wispforest.io/" }
-	maven { url "https://maven.cafeteria.dev" }
-	maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
-	maven { url "https://storage.googleapis.com/devan-maven/" }
-	maven { url 'https://maven.gegy.dev' }
-	maven { url 'https://maven.kosmx.dev/' }
-	maven { url 'https://jitpack.io' }
-	maven {
-		name = "Xander Maven"
-		url = "https://maven.isxander.dev/releases"
-	}
-	maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
+    mavenCentral()
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url 'https://maven.blamejared.com' }
+    maven { url "https://minecraft.guntram.de/maven/" }
+    maven { url "https://maven.terraformersmc.com/" }
+    maven { url "https://maven.wispforest.io/" }
+    maven { url "https://maven.cafeteria.dev" }
+    maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
+    maven { url "https://storage.googleapis.com/devan-maven/" }
+    maven { url 'https://maven.gegy.dev' }
+    maven { url 'https://maven.kosmx.dev/' }
+    maven { url 'https://jitpack.io' }
+    maven {
+        name = "Xander Maven"
+        url = "https://maven.isxander.dev/releases"
+    }
+    maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
 
-	mavenLocal()
+    mavenLocal()
 }
 
 dependencies {
-	localRuntime project(':content:forgero-vanilla')
-	localRuntime project(':content:forgero-extended')
-	localRuntime project(':content:forgero-compat')
-	localRuntime project(':content:forgero-structures')
+    localRuntime project(':content:forgero-vanilla')
+    localRuntime project(':content:forgero-extended')
+    localRuntime project(':content:forgero-compat')
+    localRuntime project(':content:forgero-structures')
 
-	localRuntime project(path: ':fabric:modules:bows', configuration: 'namedElements')
+    localRuntime project(path: ':fabric:modules:bows', configuration: 'namedElements')
 
-	implementation project(':forgero-core')
-	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
-	implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
-	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
+    implementation project(':forgero-core')
+    implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
+    implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
+    implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modCompileOnly "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+    modCompileOnly "vazkii.patchouli:Patchouli:${project.patchouli_version}"
 
-	modImplementation("maven.modrinth:arrp:${project.aarp_version}")
+    modImplementation("maven.modrinth:arrp:${project.aarp_version}")
 
-	//dynamiclights compat
-	modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
-	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
+    //dynamiclights compat
+    modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
+    modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
-	//better combat
-	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
-	//modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
-	//modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
+    //better combat
+    modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
+    //modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
+    //modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
-	//betterend&betternether
-	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
-	// modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
-	// modImplementation "maven.modrinth:MpzVLzy5:InVK1xFf"
+    //betterend&betternether
+    // modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
+    // modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
+    // modImplementation "maven.modrinth:MpzVLzy5:InVK1xFf"
 
-	//emi
-	//modCompileOnly "dev.emi:emi:${emi_version}:api"
-	//modLocalRuntime "dev.emi:emi:${emi_version}"
-	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
+    //emi
+    //modCompileOnly "dev.emi:emi:${emi_version}:api"
+    //modLocalRuntime "dev.emi:emi:${emi_version}"
+    //modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
-	//JEI
-	// modRuntimeOnly "maven.modrinth:jei:${project.jei_version}"
+    //JEI
+    // modRuntimeOnly "maven.modrinth:jei:${project.jei_version}"
 
-	//toolstats testing
-	//modImplementation "curse.maven:tool-stats-377109:3944167"
-	//modImplementation "net.darkhax.bookshelf:Bookshelf-Fabric-1.19.2:16.1.11"
-
-
-	//Twilight forest compat
-	//modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
-
-	//continuity testing
-	//modImplementation "curse.maven:continuity-531351:3822250"
-
-	//alloygery testing
-	//modImplementation "curse.maven:alloygery-573592:3778894"
-	//modImplementation "curse.maven:nbtcrafting-314633:3707208"
-
-	//Therassium testing
-	//modImplementation "curse.maven:therassium-554562:3829121"
-	//modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
-
-	//mythicmetals testing
-	//modImplementation "curse.maven:mythicmetals-410127:4118479"
-	//modImplementation "curse.maven:alloy-forgery-438718:4073356"
-	//modImplementation "curse.maven:owo-lib-532610:4028921"
-	//annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
-	//modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
-	//modImplementation "curse.maven:roughly-enough-resources-325625:3837336"
-	//modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
-	//modApi "curse.maven:modmenu-308702:4145207"
-	//modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
-	//include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
-	// Cardinal Components
-	//modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-	//modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
-
-	//ae2 testing
-	//modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
-	//modLocalRuntime('teamreborn:energy:2.3.0')
-
-	//IPN testing
-	//modCompileOnly "curse.maven:inventory-profiles-next-495267:4263990"
-	//modCompileOnly "curse.maven:libipn-679177:4263961"
-
-	//Polymorph testing
-
-	//modImplementation "curse.maven:cardinal-components-318449:3669769"
-	//modImplementation "curse.maven:cardinal-components-318449:3669770"
-	//modImplementation "curse.maven:cardinal-components-318449:3669771"
-	//modImplementation "curse.maven:cardinal-components-318449:3669774"
-	//modImplementation "curse.maven:cardinal-components-318449:3669773"
-	//modImplementation "curse.maven:polymorph-397434:3793108"
-
-	//modImplementation "curse.maven:combatedit-385513:3869344"
-
-	//modImplementation 'com.ptsmods:devlogin:2.1'
-
-	modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Mod Menu API
-	modImplementation("com.terraformersmc:modmenu:${this.modmenu_version}")
-
-	modLocalRuntime "maven.modrinth:just-load:${project.justload_version}"
+    //toolstats testing
+    //modImplementation "curse.maven:tool-stats-377109:3944167"
+    //modImplementation "net.darkhax.bookshelf:Bookshelf-Fabric-1.19.2:16.1.11"
 
 
-	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}"
+    //Twilight forest compat
+    //modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
+
+    //continuity testing
+    //modImplementation "curse.maven:continuity-531351:3822250"
+
+    //alloygery testing
+    //modImplementation "curse.maven:alloygery-573592:3778894"
+    //modImplementation "curse.maven:nbtcrafting-314633:3707208"
+
+    //Therassium testing
+    //modImplementation "curse.maven:therassium-554562:3829121"
+    //modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
+
+    //mythicmetals testing
+    //modImplementation "curse.maven:mythicmetals-410127:4118479"
+    //modImplementation "curse.maven:alloy-forgery-438718:4073356"
+    //modImplementation "curse.maven:owo-lib-532610:4028921"
+    //annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+    //modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
+    //modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
+    //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+    //modImplementation "curse.maven:roughly-enough-resources-325625:3837336"
+    //modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
+    //modApi "curse.maven:modmenu-308702:4145207"
+    //modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
+    //include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
+    // Cardinal Components
+    //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+    //modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+
+    //ae2 testing
+    //modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
+    //modLocalRuntime('teamreborn:energy:2.3.0')
+
+    //IPN testing
+    //modCompileOnly "curse.maven:inventory-profiles-next-495267:4263990"
+    //modCompileOnly "curse.maven:libipn-679177:4263961"
+
+    //Polymorph testing
+
+    //modImplementation "curse.maven:cardinal-components-318449:3669769"
+    //modImplementation "curse.maven:cardinal-components-318449:3669770"
+    //modImplementation "curse.maven:cardinal-components-318449:3669771"
+    //modImplementation "curse.maven:cardinal-components-318449:3669774"
+    //modImplementation "curse.maven:cardinal-components-318449:3669773"
+    //modImplementation "curse.maven:polymorph-397434:3793108"
+
+    //modImplementation "curse.maven:combatedit-385513:3869344"
+
+    //modImplementation 'com.ptsmods:devlogin:2.1'
+
+    modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    // Mod Menu API
+    modImplementation("com.terraformersmc:modmenu:${this.modmenu_version}")
+
+    modLocalRuntime "maven.modrinth:just-load:${project.justload_version}"
+
+
+    modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}"
 
 }
 
 sourceSets {
-	test {
-		compileClasspath += test.compileClasspath
-		runtimeClasspath += test.runtimeClasspath
-		runtimeClasspath += main.runtimeClasspath
-	}
+    test {
+        compileClasspath += test.compileClasspath
+        runtimeClasspath += test.runtimeClasspath
+        runtimeClasspath += main.runtimeClasspath
+    }
 }
 
 loom {
-	accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
-	runs {
-		testmodServer {
-			server()
-			ideConfigGenerated project.rootProject == project
-			name = "Testmod Server"
-			source sourceSets.test
-		}
-		gametest {
-			inherit testmodServer
+    accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
+    runs {
+        testmodServer {
+            server()
+            ideConfigGenerated project.rootProject == project
+            name = "Testmod Server"
+            source sourceSets.test
+        }
+        gametest {
+            inherit testmodServer
 
-			name "Game Test"
-			// Enable the gametest runner
-			vmArg "-Dfabric-api.gametest"
-			vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
-			runDir "build/gametest"
-		}
-	}
+            name "Game Test"
+            // Enable the gametest runner
+            vmArg "-Dfabric-api.gametest"
+            vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
+            runDir "build/gametest"
+        }
+    }
 }
 
 test {
-	useJUnitPlatform()
-	maxParallelForks = 32
-	testLogging.events("failed")
-	testLogging.info.events = ["failed", "skipped"]
+    useJUnitPlatform()
+    maxParallelForks = 32
+    testLogging.events("failed")
+    testLogging.info.events = ["failed", "skipped"]
 }
 
 //test.dependsOn runGametest
