--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id "maven-publish"
 }
+
 def isSnapshotVersion = { versionString ->
 	return versionString.contains("-g")
 }
@@ -41,6 +42,9 @@ subprojects {
 	repositories {
 		mavenCentral()
 		mavenLocal()
+		maven {
+			url "https://libraries.minecraft.net"
+		}
 	}
 }
 
@@ -48,10 +52,7 @@ subprojects { project ->
 	if (project.name != 'content') {
 		apply plugin: "maven-publish"
 		apply plugin: "java-library"
-		repositories {
-			mavenCentral()
-			mavenLocal()
-		}
+
 
 		publishing {
 			repositories {
