--- a/forgero-core/build.gradle
+++ b/forgero-core/build.gradle
@@ -4,9 +4,6 @@ plugins {
 	id 'maven-publish'
 }
 
-repositories {
-	mavenCentral()
-}
 
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.24'
@@ -15,6 +12,7 @@ dependencies {
 	api 'com.google.guava:guava:33.0.0-jre'
 	api 'org.apache.logging.log4j:log4j-core:2.18.0'
 	api 'com.google.code.gson:gson:2.9.0'
+	api 'com.mojang:datafixerupper:6.0.8'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
