--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,8 +1,8 @@
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 loader_version=0.15.1
-
 #Fabric api
 fabric_version=0.88.1+1.20.1
+aarp_version=0.8.1
+fabric.loom.multiProjectOptimisation=true
 
-aarp_version=0.8.0
