--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id "maven-publish"
 }
 
+
 def isSnapshotVersion = { versionString ->
 	return versionString.contains("-g")
 }
@@ -38,13 +39,31 @@ group = project.maven_group
 subprojects {
 	version = "${getGitVersion()}"
 	group = project.maven_group
-
+	
 	repositories {
 		mavenCentral()
-		mavenLocal()
+		maven { url "https://api.modrinth.com/maven" }
+		maven { url "https://cursemaven.com" }
+		maven { url 'https://jitpack.io' }
+		maven { url "https://maven.shedaniel.me/" }
+		maven { url 'https://maven.blamejared.com' }
+		maven { url "https://minecraft.guntram.de/maven/" }
+		maven { url "https://maven.terraformersmc.com/" }
+		maven { url "https://maven.wispforest.io/" }
+		maven { url "https://maven.cafeteria.dev" }
+		maven { url "https://maven.jamieswhiteshirt.com/libs-release" }
+		maven { url 'https://maven.gegy.dev' }
+		maven { url 'https://maven.kosmx.dev/' }
+		maven { url 'https://jitpack.io' }
+		maven {
+			name = "Xander Maven"
+			url = "https://maven.isxander.dev/releases"
+		}
+		maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
 		maven {
 			url "https://libraries.minecraft.net"
 		}
+		mavenLocal()
 	}
 }
 
