* Clean up properties

--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -8,8 +8,6 @@ fabric_version=0.89.1+1.20.2
 # ARRP
 aarp_version=0.8.1
 
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2560M
-org.gradle.parallel=true
+# Loom
 fabric.loom.multiProjectOptimisation=true
 
