--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ modid=forgero
 minecraft_version=1.20.4
 # Forgero version
 forgero_version=0.11.12
-release_type=release
+release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Optimizations
