* Bumped to rc-1

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ modid=forgero
 # Minecraft version
 minecraft_version=1.20.4
 # Forgero version
-forgero_version=0.11.12
+forgero_version=0.11.12-rc-1
 release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
