* Included bow module in Fabric build

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	include project(':content:forgero-compat')
 	include project(':content:forgero-structures')
 	include project(':fabric:modules:generator')
-
+	include project(':fabric:modules:bows')
+	
 	api project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 
 	runtimeOnly project(':content:forgero-vanilla')
