--- a/fabric/modules/bows/build.gradle
+++ b/fabric/modules/bows/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-	implementation project(":fabric:forgero-fabric-core")
-	implementation project(":fabric:minecraft-common")
+	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
+	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
