--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ modid=forgero
 # Minecraft version
 minecraft_version=1.20.1
 # Forgero version
-forgero_version=0.11.12
-release_type=release
+forgero_version=0.12.0-rc-1
+release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Optimizations
