--- a/content/build.gradle
+++ b/content/build.gradle
@@ -9,10 +9,10 @@ subprojects {
 	dependencies {
 		implementation project(':forgero-core')
 		testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-		testImplementation 'org.projectlombok:lombok:1.18.22'
 
-		compileOnly 'org.projectlombok:lombok:1.18.24'
-		annotationProcessor 'org.projectlombok:lombok:1.18.24'
+		annotationProcessor 'org.projectlombok:lombok:1.18.32'
+		implementation 'org.projectlombok:lombok:1.18.32'
+		
 		implementation 'org.jetbrains:annotations:23.0.0'
 		implementation 'com.google.guava:guava:31.1-jre'
 		implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
