--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -44,7 +44,7 @@ subprojects {
 		modCompileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
 
 		annotationProcessor 'org.projectlombok:lombok:1.18.32'
-		compileClasspath 'org.projectlombok:lombok:1.18.32'
+		implementation 'org.projectlombok:lombok:1.18.32'
 
 		implementation 'org.jetbrains:annotations:23.0.0'
 		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
