[Fix] Small cleanup change (sorry sigg no pr)

--- a/content/forgero-extended/src/main/resources/data/forgero/packs/vein_mining_schematics/package.json
+++ b/content/forgero-extended/src/main/resources/data/forgero/packs/vein_mining_schematics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vein_mining_parts",
+  "name": "vein_mining_schematics",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
